[project]
name = "maw-sh"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "django>=5.2.3",
  "django-vite>=3.1.0",
  "environs[django]>=14.2.0",
  "wagtail>=7.0.1",
]

[dependency-groups]
dev = [
  "django-stubs-ext>=5.2.0",
  "django-types>=0.21.0",
  "pre-commit>=4.2.0",
  "ruff>=0.12.0",
]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.djlint]
profile = "django"
format_attribute_template_tags = true
indent = 2
line_break_after_multiline_tag = true
max_line_length = 100
preserve_blank_lines = true
