[project]
name = "maw-sh"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "boto3>=1.39.3",
  "django>=5.2.3",
  "django-storages[s3]>=1.14.6",
  "django-vite>=3.1.0",
  "environs[django]>=14.2.0",
  "gunicorn>=23.0.0",
  "psycopg[binary]>=3.2.9",
  "wagtail>=7.0.1",
  "wagtailmedia>=0.16.0",
  "whitenoise[brotli]>=6.9.0",
]

[dependency-groups]
dev = [
  "django-stubs-ext>=5.2.0",
  "django-types>=0.21.0",
  "pre-commit>=4.2.0",
  "ruff>=0.12.0",
]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.djlint]
profile = "django"
format_attribute_template_tags = true
indent = 2
line_break_after_multiline_tag = true
max_line_length = 100
preserve_blank_lines = true
