[project]
name = "maw-sh"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "beautifulsoup4>=4.13.4",
  "bleach>=6.2.0",
  "boto3>=1.39.3",
  "django>=5.2.3",
  "django-htmx>=1.23.2",
  "django-polymorphic>=4.1.0",
  "django-redis>=6.0.0",
  "django-simple-captcha>=0.6.2",
  "django-storages[s3]>=1.14.6",
  "django-template-partials>=24.4",
  "django-vite>=3.1.0",
  "environs[django]>=14.2.0",
  "gunicorn>=23.0.0",
  "markdown>=3.8.2",
  "pillow>=11.3.0",
  "psycopg[binary]>=3.2.9",
  "requests>=2.32.4",
  "wagtail>=7.0.1",
  "wagtail-meilisearch>=1.0.0",
  "wagtailmedia>=0.16.0",
  "wagtailmenus>=4.0.4",
  "whitenoise[brotli]>=6.9.0",
]

[dependency-groups]
dev = [
  "django-stubs-ext>=5.2.0",
  "django-types>=0.21.0",
  "pre-commit>=4.2.0",
  "ruff>=0.12.0",
]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.djlint]
profile = "django"
format_attribute_template_tags = true
indent = 2
line_break_after_multiline_tag = true
max_line_length = 100
preserve_blank_lines = true
custom_blocks = "link,button,partialdef,field"
